--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
     id 'io.freefair.lombok' version '5.3.0'
 }
 
@@ -13,3 +14,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+applicationDefaultJvmArgs = ["-XX:+ShowCodeDetailsInExceptionMessages"]
