--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,13 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.openjdk.jmh:jmh-core:1.26'
+    testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.26'
 }
 
-applicationDefaultJvmArgs = ["-XX:+ShowCodeDetailsInExceptionMessages"]
+task jmh(type: JavaExec, dependsOn: testClasses) {
+    group = 'build'
+    main = 'org.openjdk.jmh.Main'
+    classpath = sourceSets.test.compileClasspath + sourceSets.test.runtimeClasspath
+    applicationDefaultJvmArgs = ["-XX:+ShowCodeDetailsInExceptionMessages"]
+}
